# openflow-structured-data-pipeline-demo

./: .ai-rules  .gitignore  README.md  Taskfile.yml  env.template  ivy-settings.xml  pyproject.toml
.taskfiles/: opencatalog.yml
app/: main.py
flows/default/: Ingest-Data.json  analysis-and-design.json  create-or-alter-schema.json  markingestiondone.json  move-to-ingest.json  schema-intelligence.json  structuredaipipelinegdrivesharepoint.json
infra/: opencatalog.sql  opencatalog_cleanup.sql  setup.sh  setup.sql
notebooks/: workbook.ipynb
prompts/: system_message.md  user_message.md
sample-data/01_festival_uploads/beat_valley/: beat_valley_lineup_2025.csv
sample-data/01_festival_uploads/coastal_beats/: coastal_beats_performances.csv
sample-data/01_festival_uploads/harmony_grove/: harmony_grove_lineup.csv
sample-data/01_festival_uploads/music_mountain/: music_mountain_schedule.csv
sample-data/01_festival_uploads/soundwave_festival/: soundwave_events_2025.csv  soundwave_events_enhanced.csv
sample-data/02_customer_data/: customers.csv  ticket_sales.csv
sample-data/google-drive-docs/: document_metadata.csv  document_metadata.md
scripts/: evaluate_schema_check.groovy  extract_cortex_response.groovy  extract_csv_metadata.groovy  prepare_slack_message.groovy
sql/: ingestion_mapping.sql  ingestion_mapping_avro_schema.avsc  schema_evolution_check.sql  schema_state_draft.sql  update_schema_registry.sql  upsert_schema_registry.sql
