[project]
name = "openflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awscli-local>=0.22.2",
    "bcrypt>=4.3.0",
    "faker>=37.5.3",
    "ipykernel>=6.30.1",
    "jinja2>=3.1.6",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pyiceberg[s3fs]>=0.9.1",
    "python-dotenv>=1.1.1",
    "snowflake-snowpark-python>=1.37.0",
]
